# personal_polyspace_toolkit

./: .agentkit-installed-files  .env.example  .gitattributes  .gitignore  .gitignore.sample  .polyspace-toolkit.schema.json  .sembleignore  AGENTS.md  BENCHMARK.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  LICENSE.md  Makefile  NOTICE.md  QWEN.md  README.md  UPSTREAM.md  agentkit-manifest.json  agents_analysis.md  estimate.md  install.sh  instruction.txt  package.json  pyproject.toml  update.sh
.agent/memory/: README.md  index.json
.agent/plans/: template.md
.agent/tasks/: README.md  (+1 more)
.claude-plugin/: marketplace.json
.mcp/: README.md  rtk.md  semble.md  serena.md  servers.example.json
.understand-anything/: .understandignore  README.md  config.example.json
eval/: run_eval.py
examples/: polyspace-toolkit.json  qwen-settings.local.example.json
scripts/: agent_setup.py  agentkit_installer.py  audit_memory_staleness.py  audit_module_cards.py  audit_task_logs.py  check_agent_rules.py  check_architecture_boundaries.py  check_context_staleness.py  collect_task_trace.py  detect_large_agent_files.py  detect_large_context_docs.py  extract_task_memory.py  generate_codemap.py  run_targeted_tests.py  search_understand_graph.py  summarize_changed_files.py  sync_codex_plugin.py  understand_placeholder.py  update_module_cards.py  validate_agent_docs.py  validate_docs.py  validate_memory_links.py  validate_product_surfaces.py  validate_understand_graph.py
src/: AGENTS.md  CLAUDE.md  __init__.py
tests/: AGENTS.md
update/: learn_plugmem_19062026.md  learn_rtk_14062026.md
(+179 files in other folders)
